--- a/MemCache-dep.yaml
+++ b/MemCache-dep.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vproMC-Deployment
+  name: vpromc.deployment
   labels:
     app: vpromc
 spec:
@@ -15,7 +15,7 @@ spec:
         app: vpromc
     spec:
       containers:
-        - name: vproMC-Container
+        - name: vpromc.container
           image: memcached
           ports:
             - name: vpromc-port
