--- a/vproDB-dep.yaml
+++ b/vproDB-dep.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vproDB-Deployment
+  name: vprodb.deployment
   labels:
     app: vprodb
 spec:
@@ -15,12 +15,12 @@ spec:
         app: vprodb
     spec:
       containers:
-        - name: vproDB-Container
+        - name: vprodb.container
           image: vprofile/vprofiledb:V1
 #          args:
 #           - "--ignore-db-dir=lost+found"
           volumeMounts:
-            - name: vpro-DB-Data
+            - name: vpro.db.data
               mountPath: /var/lib/mysql
           ports:
             - name: vprodb-port
@@ -34,14 +34,14 @@ spec:
       nodeSelector:
         zone: us-east-1a
       volumes:
-        - name: vpro-DB-Data
+        - name: vpro.db.data
           awsElasticBlockStore:
             volumeID: vol-0d079d82dd9183582
             fsType: ext4
       initContainers:
-        - name: busybox-Start-Exec-Stop
+        - name: busybox.start.exec.stop
           image: busybox:latest
           args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
           volumeMounts:
-            - name: vpro-DB-Data
+            - name: vpro.db.data
               mountPath: /var/lib/mysql
