--- a/RabbitMQ-dep.yaml
+++ b/RabbitMQ-dep.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vprormq.deployment
+  name: vprormq-deployment
   labels:
     app: vprormq
 spec:
@@ -15,7 +15,7 @@ spec:
         app: vprormq
     spec:
       containers:
-        - name: vprormq.container
+        - name: vprormq-container
           image: rabbitmq
           ports:
             - name: vprormq-port
