Lower case and '-' updated

--- a/vproDB-dep.yaml
+++ b/vproDB-dep.yaml
@@ -20,7 +20,7 @@ spec:
 #          args:
 #           - "--ignore-db-dir=lost+found"
           volumeMounts:
-            - name: vpro.db.data
+            - name: vpro-db-data
               mountPath: /var/lib/mysql
           ports:
             - name: vprodb-port
@@ -43,5 +43,5 @@ spec:
           image: busybox:latest
           args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
           volumeMounts:
-            - name: vpro.db.data
+            - name: vpro-db-data
               mountPath: /var/lib/mysql
