--- a/MemCache-dep.yaml
+++ b/MemCache-dep.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vpromc-deployment
+  name: vprocache01
   labels:
-    app: vpromc
+    app: vprocache01
 spec:
   selector:
     matchLabels:
-      app: vpromc
+      app: vprocache01
   replicas: 1
   template:
     metadata:
       labels:
-        app: vpromc
+        app: vprocache01
     spec:
       containers:
-        - name: vpromc-container
+        - name: vpromc
           image: memcached
           ports:
             - name: vpromc-port
