--- a/mc-CIP.yaml
+++ b/mc-CIP.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: vpromc-service
+  name: vprocache01
 spec:
   ports:
     - port: 11211
       targetPort: vpromc-port
       protocol: TCP
   selector:
-    app: vpromc
+    app: vprocache01
   type: ClusterIP
