--- a/rmq-CIP.yaml
+++ b/rmq-CIP.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: vprormq-service
+  name: vpromq01
 spec:
   ports:
     - port: 15672
       targetPort: vprormq-port
       protocol: TCP
   selector:
-    app: vprormq
+    app: vpromq01
   type: ClusterIP
