--- a/vproApp-dep.yaml
+++ b/vproApp-dep.yaml
@@ -20,3 +20,10 @@ spec:
           ports:
             - name: vproapp-port
               containerPort: 8080
+      initContainers:
+        - name: init-vprodb
+          image: busybox:latest
+          command: ['sh', '-c', "until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprodb; sleep 2; done"]
+        - name: init-vprocache01
+          image: busybox:latest
+          command: ['sh', '-c', "until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprocache01; sleep 2; done"]
