--- a/vproDB-EKS-dep.yaml
+++ b/vproDB-EKS-dep.yaml
@@ -17,6 +17,9 @@ spec:
       containers:
         - name: vprodb
           image: gohith/step_docker_db
+          volumeMounts:
+            - name: vpro-db-data
+              mountPath: /var/lib/mysql
           ports:
             - name: vprodb-port
               containerPort: 3306
@@ -28,4 +31,8 @@ spec:
                   key: db-pass
       nodeSelector:
         zone: us-east-1a
-
+      volumes:
+        - name: vpro-db-data
+          awsElasticBlockStore:
+            volumeID: vol-05d043cedfdeab6ff
+            fsType: ext4
